--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   ],
   "author": "E-Com Club",
   "license": "MIT",
+  "private": true,
   "bugs": {
     "url": "https://github.com/ecomclub/mony/issues"
   },
