--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
       "alert"
     ]
   },
+  "dependencies": {
+    "jquery": "3.x",
+    "api-ai-javascript": "2.x"
+  },
   "bugs": {
     "url": "https://github.com/ecomclub/mony/issues"
   },
