--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ecomplus-mony",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "JS client script to chatbot assistant in E-Com Plus admin panel",
   "main": "index.js",
   "scripts": {
@@ -29,7 +29,8 @@
       "localStorage",
       "sessionStorage",
       "window",
-      "alert"
+      "alert",
+      "ApiAi"
     ]
   },
   "dependencies": {
